# Task-Manager-MCP

./: .gitignore  Dockerfile  cogni.yaml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: DEVELOPER.md  README.md
src/: task_server.py
tests/: test_add_task.py  test_read_tasks.py
